--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,11 +95,11 @@ install(TARGETS ${MODULE_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${STORAGE
 
 if(ENABLE_GNOME_NETWORKMANAGER)
     target_sources(${MODULE_NAME} PRIVATE NetworkManagerGnomeProxy.cpp 
-                    NetworkManagerGnomeWIFI.cpp
-                    NetworkManagerGnomeEvents.cpp
-                    NetworkManagerGnomeUtils.cpp )
+                                GnomeProxy/NetworkManagerGnomeUtils.cpp
+                                GnomeProxy/NetworkManagerGnomeClient.cpp
+                                )
     target_include_directories(${MODULE_NAME} PRIVATE ${GLIB_INCLUDE_DIRS} ${LIBNM_INCLUDE_DIRS})
-    target_link_libraries(${MODULE_NAME} PRIVATE ${LIBNM_LIBRARIES})
+    target_link_libraries(${MODULE_NAME} PRIVATE ${GLIB_LIBRARIES} ${GIO_LIBRARIES})
 else()
     target_sources(${MODULE_NAME} PRIVATE NetworkManagerRDKProxy.cpp)
     target_include_directories(${MODULE_NAME} PRIVATE ${IARMBUS_INCLUDE_DIRS})
