wifiDisconnect removeKnowSSid added

--- a/Tests/raspberrypi/CMakeLists.txt
+++ b/Tests/raspberrypi/CMakeLists.txt
@@ -1,34 +1,31 @@
-cmake_minimum_required(VERSION 3.5)
-project(NmDbusClient)
+cmake_minimum_required(VERSION 3.3)
 
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+project(rpiTest)
+
+set(RPI_TEST rpi_test)
+
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(GLIB REQUIRED glib-2.0)
 pkg_check_modules(GIO REQUIRED gio-2.0)
 pkg_check_modules(LIBNM REQUIRED libnm)
 
-include_directories(
-    ${GLIB_INCLUDE_DIRS} 
-    ${GIO_INCLUDE_DIRS} 
-    ${LIBNM_INCLUDE_DIRS}
-    ../../
-    ../../GnomeProxy
+add_executable(${RPI_TEST})
+
+set_target_properties(${RPI_TEST} PROPERTIES
+    CXX_STANDARD 11
+    CXX_STANDARD_REQUIRED YES
 )
 
-add_executable(
-    NmDbusClient 
-    rpiUnitTest.cpp             
+target_sources(${RPI_TEST} PRIVATE rpiUnitTest.cpp
     ../../NetworkManagerLogger.cpp
     ../../GnomeProxy/NetworkManagerGnomeClient.cpp
     ../../GnomeProxy/NetworkManagerGnomeUtils.cpp
     ../../GnomeProxy/NetworkManagerDbusMgr.cpp
-    )
-
-target_include_directories(NmDbusClient PRIVATE ../GnomeProxy)
-target_link_libraries(
-    NmDbusClient 
-    ${GLIB_LIBRARIES}
-    ${GIO_LIBRARIES}
-    uuid # TODO remove
 )
+
+target_include_directories(${RPI_TEST} PRIVATE ${GLIB_INCLUDE_DIRS} ${LIBNM_INCLUDE_DIRS} ${GIO_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR})
+target_include_directories(${RPI_TEST} PRIVATE ../../GnomeProxy ../../)
+
+install(TARGETS ${RPI_TEST} DESTINATION bin)
+
+target_link_libraries(${RPI_TEST} PRIVATE ${GLIB_LIBRARIES} ${GIO_LIBRARIES} uuid)
